update view operation
